# its-site

./: .gitignore  Makefile  common.c  common.h  go.mod  its.go  main.go
astroshit/: Cargo.toml  index.html
astroshit/.cargo/: config.toml
astroshit/src/: main.rs
certs/: server.crt  server.key
static/: astro.html  calendar.html  index.html  specs.html
